charts/istio-httpbin-deploy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  replicas: 5
  selector:
    matchLabels:
      app: httpbin
      version: v1
  template:
    metadata:
      labels:
        app: httpbin
        version: v1
      annotations:
        argocd.argoproj.io/sync-wave: "3"
    spec:
      serviceAccountName: httpbin
      containers:
      - name: httpbin
        image: docker.io/kennethreitz/httpbin:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
