charts/istio-httpbin-deploy/virtualservice-public.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - httpbin.example.com
  gateways:
  - istio-system/public-ingress-gateway
  http:
    - name: httpbin
      headers:
        request:
          add:
            X-A1-origin-1: public-ingress-gateway-httpbin-vs
      route:
      - destination:
          host: httpbin.default.svc.cluster.local
          port:
            number: 80
